# arkham

./: .gitignore  LICENSE  README.md  gulpfile.js  launch  package.json  pyproject.toml
etc/example/: daemon.config.js  daemon.config.yml  daemon.download.sh  daemon.finance.sh  daemon.flower.sh  daemon.redis.sh  daemon.trade.sh  daemon.wechatflask.sh  profile.json  start.sh  wechat.json
jqdata/: init_code.py  jqauth.py  nightly_finance.py  runtime_download.py  weekly_finance.py
maxwell/: Algo_0xB801.py  Algo_0xB900.py  Beta_browser.ipynb
pascal/: Algo_0xA001.py  Algo_0xA800.py  Algo_0xA801.py  Algo_0xA901.py  Algo_0xA902.py
script/: index.html  index.js  init_code.py  init_essential.py  manual_download.py  nightly_HS300.py  nightly_assess.py  nightly_finance.py  nightly_fund_net_value.py  runtime_dispatcher.js  runtime_download.py  trade.py  watchdog.js  wechat_flask.py  wechat_qr.js
script/static/: 404.html  snakes.js
test/func/: test_log.py  test_trade.py
test/unit/: test_log_haunter.py
util/: log_logging.py  log_loguru.py  personal.py  util.py
