[tool.poetry]
name = "arkham"
version = "0.1.0"
description = ""
authors = ["gaoming714 <gaoming714@126.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.1.4"
selenium = "^3.141.0"
pytest = "^6.1.0"
requests = "^2.24.0"
flask = "^1.1.2"
jqdatasdk = "^1.8.1"
itchat = "^1.3.10"
flower = "^0.9.5"
redis = "^3.5.3"
celery = "^5.0.0"
eventlet = "0.26"
loguru = "^0.5.3"
arrow = "^0.16.0"
pendulum = "^2.1.2"
icecream = "^2.0.0"
pysnooper = "^0.4.2"
numpy = "1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
